--- a/tests/Noobot.Tests.Unit/Noobot.Tests.Unit.csproj
+++ b/tests/Noobot.Tests.Unit/Noobot.Tests.Unit.csproj
@@ -1,19 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
-
+    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <LangVersion>latest</LangVersion>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="expectedobjects" Version="2.3.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
-    <PackageReference Include="Moq" Version="4.7.145" />
-    <PackageReference Include="shouldly" Version="2.8.3" />
-    <PackageReference Include="SlackConnector" Version="4.1.48" />
-    <PackageReference Include="xunit" Version="2.2.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
+    <PackageReference Include="expectedobjects" Version="2.3.4" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0-preview-20180221-13" />
+    <PackageReference Include="Moq" Version="4.8.2" />
+    <PackageReference Include="shouldly" Version="3.0.0" />
+    <PackageReference Include="SlackConnector" Version="4.1.52" />
+    <PackageReference Include="xunit" Version="2.4.0-beta.1.build3958" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0-beta.1.build3958" />
   </ItemGroup>
 
   <ItemGroup>
