--- a/src/Noobot.Console/Noobot.Console.csproj
+++ b/src/Noobot.Console/Noobot.Console.csproj
@@ -2,13 +2,36 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <StartupObject>Noobot.Console.Program</StartupObject>
     <ApplicationIcon />
     <AssemblyVersion>1.0.0.1</AssemblyVersion>
     <FileVersion>1.0.0.1</FileVersion>
     <Version>1.0.1</Version>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="App.Metrics.Extensions.Configuration" Version="2.0.0-preview1" />
+    <PackageReference Include="App.Metrics.Extensions.DependencyInjection" Version="2.0.0-preview1" />
+    <PackageReference Include="App.Metrics.Health.Extensions.DependencyInjection" Version="2.0.0-preview1" />
+    <PackageReference Include="App.Metrics.Reporting.Console" Version="2.0.0-preview1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.1.0-preview1-final" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.1.0-preview1-final" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.0-preview1-final" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.1.0-preview1-final" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.1.0-preview1-final" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Noobot.Core\Noobot.Core.csproj" />
