--- a/src/Noobot.Console/appsettings.json
+++ b/src/Noobot.Console/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "NoobotOptions": {
-    "ApiKey": "xoxb-117624872803-KMqbP6M1PhdD3XqyTORej77I"
+    "ApiKey": "PUT_KEY_HERE"
   },
   "MetricsOptions": {
 
